# zero2prod

./: Cargo.toml  Dockerfile  spec.yaml  sqlx-data.json
scripts/: init_db.sh
src/: configuration.rs  domain.rs  main.rs  startup.rs
src/domain/: subscriber_email.rs  subscriber_name.rs
src/routes/: mod.rs  subscriptions.rs  telemetry.rs
tests/: health_check.rs
